re-update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@
 *.aux
 *.toc
 July2020/ProsdocimiPerugia_cache/*
-July2020/ProsdocimiPerugia_tooManyDetails.Rmd
+July2020/ProsdocimiPerugia_tooManyDetails.*
